--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head lang="en">
   <meta charset="utf-8">
-  <title>Lab 6</title>
+  <title>Lab 7</title>
   <script src="script.js"></script>
 </head>
 
 <body>
-  <h1>Lab 6</h1>
+  <h1 id = "price">Lab 7 Shopping Cart</h1>
 </body>
 
 </html>
